Gulp from src to dist

--- a/src/scss/blocks/_choise.scss
+++ b/src/scss/blocks/_choise.scss
@@ -1,6 +1,6 @@
 .choice {
    position: relative;
-   min-height: 898px;
+   // min-height: 898px;
    padding: 60px 0 137px;
    background: linear-gradient(#000 55%, #fff 45%);
 }
