--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -93,3 +93,13 @@
       color: $color_blue;
    }
 }
+.footer_mobile {
+   display: flex;
+   justify-content: flex-end;
+   & .footer-right-links {
+      border-radius: 4px;
+      width: 93px;
+      height: 27px;
+      margin-right: 5px;
+   }
+}
