--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -64,6 +64,9 @@ nav {
    color: #ffffff;
    text-transform: uppercase;
 }
+.xs-visible {
+   display: none;
+}
 .tel_block {
    text-align: right;
    margin: 0 0 0 155px;
