--- a/src/scss/libs/_fonts.scss
+++ b/src/scss/libs/_fonts.scss
@@ -1,5 +1,6 @@
 @font-face {
    font-family: "Roboto";
+   font-display: swap;
    src: url("../fonts/Roboto-Thin.eot");
    src: url("../fonts/Roboto-Thin.eot?#iefix") format("embedded-opentype"),
       url("../fonts/Roboto-Thin.woff") format("woff"), url("../fonts/Roboto-Thin.ttf") format("truetype");
@@ -8,6 +9,7 @@
 }
 @font-face {
    font-family: "Roboto";
+     font-display: swap;
    src: url("../fonts/Roboto-Light.eot");
    src: url("../fonts/Roboto-Light.eot?#iefix") format("embedded-opentype"),
       url("../fonts/Roboto-Light.woff") format("woff"), url("../fonts/Roboto-Light.ttf") format("truetype");
@@ -16,6 +18,7 @@
 }
 @font-face {
    font-family: "Roboto";
+     font-display: swap;
    src: url("../fonts/Roboto-Regular.eot");
    src: url("../fonts/Roboto-Regular.eot?#iefix") format("embedded-opentype"),
       url("../fonts/Roboto-Regular.woff") format("woff"), url("../fonts/Roboto-Regular.ttf") format("truetype");
@@ -24,6 +27,7 @@
 }
 @font-face {
    font-family: "Roboto";
+     font-display: swap;
    src: url("../fonts/Roboto-Bold.eot");
    src: url("../fonts/Roboto-Bold.eot?#iefix") format("embedded-opentype"),
       url("../fonts/Roboto-Bold.woff") format("woff"), url("../fonts/Roboto-Bold.ttf") format("truetype");
@@ -32,6 +36,7 @@
 }
 @font-face {
    font-family: "Roboto";
+     font-display: swap;
    src: url("../fonts/Roboto-Black.eot");
    src: url("../fonts/Roboto-Black.eot?#iefix") format("embedded-opentype"),
       url("../fonts/Roboto-Black.woff") format("woff"), url("../fonts/Roboto-Black.ttf") format("truetype");
