--- a/src/scss/base/_media.scss
+++ b/src/scss/base/_media.scss
@@ -1,6 +1,15 @@
+@media (min-width: 1200px) {
+   .xs-visible {
+      display: none;
+   }
+}
+
 @media (max-width: 1200px) {
    .tel_block {
       margin: 0 0 0 100px;
+   }
+   .xs-visible {
+      display: none;
    }
    .menu_link {
       font-size: 13px;
@@ -22,14 +31,13 @@
       font-size: 17px;
    }
    .mobile_item {
-      width: 315px;
-      height: 275px;
-   }
-   .world-link {
-      left: 41%;
+      width: 295px;
+      height: 280px;
+      margin-right: 65px;
    }
    .footer-right-links {
-      width: 240px;
+      width: 93px;
+      height: 26px;
    }
    .middle-row {
       margin-left: 48px;
@@ -37,9 +45,6 @@
 }
 
 @media (max-width: 991px) {
-   /* .wrapper {
-      width: 100%;
-   } */
    .menu {
       padding: 15px 35px 15px 35px;
    }
@@ -49,10 +54,8 @@
    .menu_item {
       padding-right: 12px;
    }
-   .subheader_logo {
-      img {
-         width: 100%;
-      }
+   .subheader_logo img {
+      width: 100%;
    }
    .subheader_phone {
       font-size: 21px;
@@ -65,6 +68,12 @@
    .tel_block {
       margin: 0 0 0 62px;
    }
+   .xs-visible {
+      display: none;
+   }
+   .promo {
+      padding-bottom: 120px;
+   }
    .promo_header {
       font-size: 40px;
    }
@@ -72,10 +81,14 @@
       font-size: 30px;
    }
    .reasons_item {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
       flex-direction: column;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
       align-items: center;
    }
-
    .reasons_content {
       margin: 10px 40px 0px 30px;
    }
@@ -96,66 +109,103 @@
       font-size: 17px;
    }
    .mobile_item_1 {
-      padding-top: 41px;
+      padding-top: 53px;
    }
    .mobile_item_2 {
-      padding-top: 41px;
+      padding-top: 60px;
    }
    .mobile_item_3 {
-      padding-top: 41px;
+      padding-top: 60px;
    }
    .mobile_item_4 {
-      padding-top: 41px;
+      padding-top: 60px;
    }
    .mobile_item_5 {
-      padding-top: 41px;
+      padding-top: 60px;
    }
    .mobile_item_6 {
-      padding-top: 41px;
+      padding-top: 53px;
    }
    .choice {
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(53%, #000), color-stop(47%, #fff));
+      background: -webkit-linear-gradient(#000 53%, #fff 47%);
+      background: -o-linear-gradient(#000 53%, #fff 47%);
       background: linear-gradient(#000 53%, #fff 47%);
    }
-   .choice_img {
-      img {
-         width: 676px;
-      }
+   .choice_img img {
+      width: 676px;
    }
-   .reasons_icon {
-      li {
-         font-size: 16px;
-      }
+   .reasons_icon li {
+      font-size: 16px;
    }
-   .world-link {
-      left: 37%;
+   .world {
+      min-height: 650px;
    }
    .footer {
       padding: 15px 15px 35px 15px;
+   }
+   .circle-row {
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
    }
    .social-circle {
       width: 30px;
       height: 30px;
       margin: 2px;
    }
-   .middle-row {
-      margin-left: 43px;
+   div .middle-row {
+      margin-left: 26px;
+   }
+   .footer_mobile {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-align: end;
+      -ms-flex-align: end;
+      align-items: flex-end;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      width: 163px;
    }
    .footer-right-links {
-      width: 173px;
-      margin-left: 5px;
+      width: 93px;
+      height: 27px;
    }
    .middle-line-grey {
-      font-size: 9px;
+      font-size: 8px;
+   }
+   .middle-line-grey a {
+      font-size: 11px;
    }
 }
+
 @media (max-width: 767px) {
+   nav {
+      height: 32px;
+   }
    .header {
       background: #212121;
    }
+   .promo {
+      padding: 170px 0 135px 0;
+   }
+   .promo_header {
+      line-height: 45px;
+   }
    .menu {
       position: fixed;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
       flex-direction: column;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
       justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
       align-items: center;
       top: 0;
       left: -100%;
@@ -163,10 +213,13 @@
       height: 100vh;
       padding: 20px 15px;
       background-color: rgba(0, 0, 0, 0.8);
+      -webkit-transition: 0.6s all;
+      -o-transition: 0.6s all;
       transition: 0.6s all;
    }
    .menu_active {
       left: 0;
+      z-index: 3;
    }
    .menu_item {
       border: 0;
@@ -174,48 +227,666 @@
    }
    .menu_link {
       font-size: 20px;
+      line-height: 35px;
    }
    .hamburger {
       display: block;
       position: absolute;
       right: 10px;
       top: 50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
       transform: translateY(-50%);
       width: 26px;
-      span {
-         display: block;
-         height: 2px;
-         width: 100%;
-         background-color: rgba(255, 255, 255, 1);
-         margin-bottom: 2px;
-      }
-      &_active {
-         span {
-            &:nth-child(1) {
-               transform: rotate(-45deg);
-            }
-            &:nth-child(2) {
-               display: none;
-            }
-            &:nth-child(3) {
-               transform: rotate(45deg);
-            }
-         }
-      }
+      height: 12px;
+   }
+   .hamburger span {
+      display: block;
+      height: 2px;
+      width: 100%;
+      background-color: white;
+      margin-bottom: 2px;
+      -webkit-transition: 0.5s all;
+      -o-transition: 0.5s all;
+      transition: 0.5s all;
+   }
+   .hamburger_active span {
+      margin-bottom: -2px;
+   }
+   .hamburger_active span:nth-child(1) {
+      -webkit-transform: translateY(3px) rotate(-45deg);
+      -ms-transform: translateY(3px) rotate(-45deg);
+      transform: translateY(3px) rotate(-45deg);
+   }
+   .hamburger_active span:nth-child(2) {
+      display: none;
+   }
+   .hamburger_active span:nth-child(3) {
+      -webkit-transform: translateY(3px) rotate(45deg);
+      -ms-transform: translateY(3px) rotate(45deg);
+      transform: translateY(3px) rotate(45deg);
+   }
+   .xs-hidden {
+      display: none;
+   }
+   .xs-visible {
+      display: block;
+   }
+   .tel_block {
+      margin: 0;
    }
    .subheader {
       top: 53px;
    }
+   .subheader_phone {
+      font-weight: 400;
+      font-size: 16px;
+      text-transform: uppercase;
+      color: #ffffff;
+      text-align: center;
+      display: block;
+      margin-top: 5px;
+   }
+   .subheader_btn {
+      width: 200px;
+      height: 40px;
+      display: block;
+      margin: 5px auto 0;
+   }
+   .choice {
+      // background: -webkit-gradient(linear, left top, left bottom, color-stop(57%, #000), color-stop(43%, #fff));
+      // background: -webkit-linear-gradient(#000 44%, #fff 43%);
+      // background: -o-linear-gradient(#000 44%, #fff 43%);
+      // background: linear-gradient(#000 44%, #fff 43%);
+      background: linear-gradient(#000 57%, #fff 43%);
+   }
+   .reasons_content {
+      margin: 10px 14px 0px 16px;
+      line-height: 21px;
+   }
+   .reasons_head {
+      font-size: 16px;
+   }
+   .reasons_text {
+      font-size: 15px;
+   }
+   .mobile {
+      // min-height: 723px !important;
+   }
+   .mobile_item {
+      margin: auto;
+      margin-bottom: 19px;
+   }
+   .choice {
+      // min-height: 828px;
+      padding-bottom: 70px;
+   }
    .choice_img img {
-      width: 70%;
+      width: 95%;
+   }
+   hr {
+      display: none;
+   }
+   .bottom-image-text {
+      // color: #fff;
+      font-weight: 300;
+      font-size: 17px;
+      line-height: 24px;
+      margin: 23px 20px 31px 23px;
+   }
+   .world {
+      min-height: 450px;
+   }
+   .devider {
+      width: 235px;
+      height: 6px;
+   }
+   .social-circle {
+      width: 25px;
+      height: 25px;
+   }
+   div .middle-row {
+      margin-left: 40px;
+      margin-right: 40px;
+   }
+   .middle-line-black {
+      font-size: 12px;
+   }
+   .middle-line-grey {
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+   }
+   .middle-line-grey a {
+      margin-right: 30px;
+      font-size: 9px;
+   }
+   .footer_mobile {
+      width: 83px;
    }
    .footer-right-links {
-      width: 10px;
-      margin-left: 5px;
+      margin-right: 0 !important;
+      margin-bottom: 5px;
+      width: 82px !important;
+      height: 25px !important;
    }
 }
-@media (max-width: 576px) {
+
+@media (max-width: 680px) {
+   .middle-line-grey a {
+      margin-right: 14px;
+   }
 }
+
+@media (max-width: 575px) {
+   .menu {
+      width: 85%;
+      line-height: 40px;
+      font-weight: 300;
+      font-size: 18px;
+   }
+   .menu_item {
+      width: 100%;
+      text-align: center;
+      padding: 5px 0;
+   }
+   .menu_link {
+      display: block;
+   }
+   .subheader {
+      height: 67px;
+   }
+   .subheader_logo {
+      margin-top: 18px;
+   }
+   .subheader_official {
+      display: none;
+   }
+   .subheader_phone {
+      font-size: 12px;
+      margin-top: 11px;
+   }
+   .subheader_btn {
+      width: 112px;
+      height: 22px;
+      font-size: 10px;
+      margin-top: 6px;
+   }
+   .subheader_btn:hover,
+   .subheader_btn:active {
+      background: -webkit-gradient(linear, left bottom, left top, from(#1eacc7), to(#4ce2ff));
+      background: -webkit-linear-gradient(bottom, #1eacc7 0%, #4ce2ff 100%);
+      background: -o-linear-gradient(bottom, #1eacc7 0%, #4ce2ff 100%);
+      background: linear-gradient(0deg, #1eacc7 0%, #4ce2ff 100%);
+   }
+   .promo-descr,
+   .promo-descr_2 {
+      display: none;
+   }
+   .promo {
+      min-height: 338px;
+      padding: 155px 0 35px 0;
+   }
+   .promo_header {
+      font-weight: 900;
+      font-size: 30px;
+      line-height: 35px;
+      padding: 0 26px;
+   }
+   .promo_subheader {
+      margin-top: 33px;
+      font-size: 20px;
+      line-height: 30px;
+      padding: 0 9px;
+   }
+   .promo_btn {
+      width: 210px;
+      height: 50px;
+      font-size: 16px;
+      margin: 70px auto 0 auto;
+   }
+   .promo_btn:hover,
+   .promo_btn:active {
+      background: -webkit-gradient(linear, left bottom, left top, from(#1eacc7), to(#4ce2ff));
+      background: -webkit-linear-gradient(bottom, #1eacc7 0%, #4ce2ff 100%);
+      background: -o-linear-gradient(bottom, #1eacc7 0%, #4ce2ff 100%);
+      background: linear-gradient(0deg, #1eacc7 0%, #4ce2ff 100%);
+   }
+   .reasons {
+      padding: 22px 0 60px 0;
+   }
+   .label {
+      margin: 0 auto 16px;
+   }
+   .title {
+      font-size: 16px;
+      margin-bottom: 24px;
+   }
+   .mobile {
+      margin: 0 15px 60px 15px;
+      padding: 25px 0 0px;
+   }
+   .mobile_row .col-sm-6 {
+      padding-left: 0;
+      padding-right: 0;
+   }
+   .mobile_item {
+      margin-top: 0px;
+      margin-bottom: 30px;
+      padding: 80px 30px 123px 34px;
+      width: 290px;
+      height: 254px;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 31px;
+   }
+   .mobile_item_plus:hover::before,
+   .mobile_item_plus:hover::after {
+      background-color: #1eacc7;
+   }
+   .mobile_item_plus::after {
+      content: "";
+      left: 46%;
+   }
+   .mobile_item_6 {
+      margin-bottom: 12px;
+   }
+   .mobile_title {
+      margin-bottom: 11px;
+   }
+   .mobile-subtitle {
+      font-size: 14px;
+   }
+   .choice {
+      min-height: 393px;
+      padding: 25px 0 40px;
+      background: linear-gradient(#000 57%, #fff 43%);
+      & .bottom-image-text {
+         margin-top: 0;
+      }
+   }
+   .choice_title {
+      display: none;
+   }
+   .choice_subtitle {
+      display: none;
+   }
+   .choice_label {
+      margin-bottom: 35px;
+   }
+   .require_label {
+      margin: 22px auto 14px;
+   }
+   .require {
+      min-height: 960px;
+      padding: 0;
+   }
+   .require_title {
+      margin-bottom: 37px;
+   }
+   .require_block {
+      margin: 4px;
+   }
+   .require_block_title {
+      font-size: 16px;
+   }
+   .require_list {
+      padding-left: 33px;
+      margin-top: 7px;
+   }
+   .require_list li {
+      font-weight: 300;
+      font-size: 14px;
+      line-height: 16px;
+   }
+   .last_blue_li {
+      margin-bottom: 35px !important;
+   }
+   .last_red_li {
+      margin-bottom: 30px !important;
+   }
+   .require_descr {
+      margin-bottom: 30px;
+      font-weight: 300;
+      font-size: 14px;
+      line-height: 16px;
+   }
+   .require_list li::before {
+      top: -3px;
+   }
+   .reasons_icon {
+      width: 103px;
+      height: 103px;
+   }
+   .world {
+      min-height: 360px;
+      padding: 25px 0 29px;
+      background: url("../img/world/world_bg.png") center center/cover no-repeat;
+   }
+   .world-label {
+      width: 79px;
+      height: 26px;
+   }
+   .world-title {
+      margin-bottom: 15px;
+   }
+   .world-subtitle {
+      font-size: 14px;
+   }
+   .world-link {
+      font-size: 15px;
+      font-weight: 400;
+      left: 39%;
+      -webkit-transform: translateX(-32%);
+      -ms-transform: translateX(-32%);
+      transform: translateX(-32%);
+   }
+   .footer {
+      min-height: 255px;
+   }
+   .devider {
+      margin-bottom: 21px;
+      height: 6px;
+      width: 255px;
+   }
+   .footer-row {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+   }
+   .middle-row {
+      -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+      order: 1;
+   }
+   div .circle-row {
+      -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+      order: 2;
+   }
+   .footer-row :last-child {
+      -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+      order: 3;
+   }
+   div .middle-row {
+      margin: 0;
+   }
+   .middle-line-black {
+      font-weight: 300;
+      font-size: 14px;
+      margin-bottom: 10px;
+   }
+   .middle-line-grey {
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      padding-left: 25px;
+      padding-right: 25px;
+      margin-bottom: 9px;
+      font-weight: 300;
+      font-size: 11px;
+      line-height: 22px;
+   }
+   .middle-line-blue {
+      margin-bottom: 17px;
+   }
+   .circle-row {
+      margin-bottom: 19px;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+   }
+   .circle-row .social-circle {
+      width: 35px;
+      height: 35px;
+   }
+   .footer_mobile {
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      margin: 0 auto;
+      width: 253px;
+   }
+   .footer-right-links {
+      margin-right: 5px !important;
+      width: 82px;
+      height: 23px;
+      border-radius: 4px;
+   }
+}
+@media (max-width: 400px) {
+   .choice {
+      background: linear-gradient(#000 50%, #fff 50%);
+   }
+}
+// @media (max-width: 1200px) {
+//    .xs-visible {
+//       display: none;
+//    }
+//    .tel_block {
+//       margin: 0 0 0 100px;
+//    }
+//    .menu_link {
+//       font-size: 13px;
+//    }
+//    .menu_item {
+//       padding-right: 20px;
+//    }
+//    .subheader_official {
+//       font-size: 12px;
+//    }
+//    .promo_header {
+//       font-size: 56px;
+//    }
+//    .promo_subheader {
+//       font-size: 33px;
+//    }
+//    .promo-descr,
+//    .promo-descr_2 {
+//       font-size: 17px;
+//    }
+//    .mobile_item {
+//       width: 315px;
+//       height: 275px;
+//    }
+//    .world-link {
+//       left: 41%;
+//    }
+//    .footer-right-links {
+//       width: 240px;
+//    }
+//    .middle-row {
+//       margin-left: 48px;
+//    }
+// }
+
+// @media (max-width: 991px) {
+//    /* .wrapper {
+//       width: 100%;
+//    } */
+//    .menu {
+//       padding: 15px 35px 15px 35px;
+//    }
+//    .menu_link {
+//       font-size: 11px;
+//    }
+//    .menu_item {
+//       padding-right: 12px;
+//    }
+//    .subheader_logo {
+//       img {
+//          width: 100%;
+//       }
+//    }
+//    .subheader_phone {
+//       font-size: 21px;
+//    }
+//    .subheader_btn {
+//       width: 100%;
+//       height: 42px;
+//       font-size: 12px;
+//    }
+//    .tel_block {
+//       margin: 0 0 0 62px;
+//    }
+//    .promo_header {
+//       font-size: 40px;
+//    }
+//    .promo_subheader {
+//       font-size: 30px;
+//    }
+//    .reasons_item {
+//       flex-direction: column;
+//       align-items: center;
+//    }
+
+//    .reasons_content {
+//       margin: 10px 40px 0px 30px;
+//    }
+//    .reasons_text {
+//       font-size: 14px;
+//    }
+//    .reasons_icon {
+//       margin-top: 5px;
+//    }
+//    .title {
+//       font-size: 30px;
+//    }
+//    .mobile_item {
+//       width: 220px;
+//       height: 200px;
+//    }
+//    .mobile_item_subtitle {
+//       font-size: 17px;
+//    }
+//    .mobile_item_1 {
+//       padding-top: 41px;
+//    }
+//    .mobile_item_2 {
+//       padding-top: 41px;
+//    }
+//    .mobile_item_3 {
+//       padding-top: 41px;
+//    }
+//    .mobile_item_4 {
+//       padding-top: 41px;
+//    }
+//    .mobile_item_5 {
+//       padding-top: 41px;
+//    }
+//    .mobile_item_6 {
+//       padding-top: 41px;
+//    }
+//    .choice {
+//       background: linear-gradient(#000 53%, #fff 47%);
+//    }
+//    .choice_img {
+//       img {
+//          width: 676px;
+//       }
+//    }
+//    .reasons_icon {
+//       li {
+//          font-size: 16px;
+//       }
+//    }
+//    .world-link {
+//       left: 37%;
+//    }
+//    .footer {
+//       padding: 15px 15px 35px 15px;
+//    }
+//    .social-circle {
+//       width: 30px;
+//       height: 30px;
+//       margin: 2px;
+//    }
+//    .middle-row {
+//       margin-left: 43px;
+//    }
+//    .footer-right-links {
+//       width: 173px;
+//       margin-left: 5px;
+//    }
+//    .middle-line-grey {
+//       font-size: 9px;
+//    }
+// }
+// @media (max-width: 767px) {
+//    .header {
+//       background: #212121;
+//    }
+//    .menu {
+//       position: fixed;
+//       flex-direction: column;
+//       justify-content: center;
+//       align-items: center;
+//       top: 0;
+//       left: -100%;
+//       width: 50%;
+//       height: 100vh;
+//       padding: 20px 15px;
+//       background-color: rgba(0, 0, 0, 0.8);
+//       transition: 0.6s all;
+//    }
+//    .menu_active {
+//       left: 0;
+//    }
+//    .menu_item {
+//       border: 0;
+//       padding-right: 0;
+//    }
+//    .menu_link {
+//       font-size: 20px;
+//    }
+//    .hamburger {
+//       display: block;
+//       position: absolute;
+//       right: 10px;
+//       top: 50%;
+//       transform: translateY(-50%);
+//       width: 26px;
+//       span {
+//          display: block;
+//          height: 2px;
+//          width: 100%;
+//          background-color: rgba(255, 255, 255, 1);
+//          margin-bottom: 2px;
+//       }
+//       &_active {
+//          span {
+//             &:nth-child(1) {
+//                transform: rotate(-45deg);
+//             }
+//             &:nth-child(2) {
+//                display: none;
+//             }
+//             &:nth-child(3) {
+//                transform: rotate(45deg);
+//             }
+//          }
+//       }
+//    }
+//    .subheader {
+//       top: 53px;
+//    }
+//    .choice_img img {
+//       width: 70%;
+//    }
+//    .footer-right-links {
+//       width: 10px;
+//       margin-left: 5px;
+//    }
+// }
+// @media (max-width: 576px) {
+// }
 
 // @media (min-width: 1400px) {
 //    .footer-right-links {
