--- a/src/scss/blocks/_mobile.scss
+++ b/src/scss/blocks/_mobile.scss
@@ -1,7 +1,7 @@
 .mobile {
    min-height: 864px;
    padding: 46px 0 80px;
-   background: url("../img/mobile-app/mobile_bg.png") center center/cover no-repeat;
+   background: url("../img/mobile-app/mobile-bg.webp") center center/cover no-repeat;
 }
 
 .mobile_title {
@@ -68,27 +68,27 @@
    }
 }
 .mobile_item_1 {
-   background: url("../img/mobile-app/card_1.png");
+   background: url("../img/mobile-app/card-1.webp");
    padding-top: 82px;
 }
 .mobile_item_2 {
-   background: url("../img/mobile-app/card_2.png");
+   background: url("../img/mobile-app/card-2.webp");
    padding-top: 88px;
 }
 .mobile_item_3 {
-   background: url("../img/mobile-app/card_3.png");
+   background: url("../img/mobile-app/card-3.webp");
    padding-top: 88px;
 }
 .mobile_item_4 {
-   background: url("../img/mobile-app/card_4.png");
+   background: url("../img/mobile-app/card-4.webp");
    padding-top: 88px;
 }
 .mobile_item_5 {
-   background: url("../img/mobile-app/card_5.png");
+   background: url("../img/mobile-app/card-5.webp");
    padding-top: 88px;
 }
 .mobile_item_6 {
-   background: url("../img/mobile-app/card_6.png");
+   background: url("../img/mobile-app/card-6.webp");
    padding-top: 83px;
 }
 .mobile_row {
