--- a/src/scss/blocks/_world.scss
+++ b/src/scss/blocks/_world.scss
@@ -2,7 +2,7 @@
    position: relative;
    min-height: 720px;
    padding: 48px 0px 45px 0px;
-   background: url("../img/world/world_bg.png");
+   background: url("../img/world/world-bg.webp");
 }
 
 .world-label {
