--- a/src/scss/blocks/_promo.scss
+++ b/src/scss/blocks/_promo.scss
@@ -1,7 +1,7 @@
 .promo {
    min-height: 800px;
    // height: 100vh;
-   background: url("../img/intro/uber_bg.png") center center/cover no-repeat;
+   background: url("../img/intro/uber-bg.webp") center center/cover no-repeat;
    padding: 180px 0 135px 0;
 }
 .promo_header {
